test08/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test08
spec:
  replicas: 4
  selector:
    matchLabels:
      app: test08
  template:
    metadata:
      labels:
        app: test08
    spec:
      containers:
        - name: main
          image: dhltraining.azurecr.io/slu
          command: ['slu']
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 10m
              memory: 10Mi
            limits:
              cpu: 20m
              memory: 20Mi
