test08/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: test08
spec:
  selector:
    app: test08
  ports:
    - port: 80
      targetPort: 8000
